--- a/veg_hi.html
+++ b/veg_hi.html
@@ -6,6 +6,8 @@
   <title>शाकाहारी मेनू</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@500;700&display=swap');
+
     body {
       margin: 0;
       padding: 0;
@@ -19,16 +21,17 @@
       max-width: 700px;
       margin: auto;
       padding: 20px;
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.9);
       border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
     }
 
     h1 {
       text-align: center;
-      font-size: 2.2rem;
+      font-size: 2.4rem;
       margin-bottom: 20px;
       color: #800000; /* Maroon */
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
     }
 
     .menu-item {
@@ -38,20 +41,23 @@
       margin: 15px 0;
       cursor: pointer;
       background-color: #f9f9f9; /* Cream */
-      transition: box-shadow 0.3s, transform 0.2s;
-      color: #800000; /* Maroon text */
+      transition: transform 0.2s, background 0.3s;
+      color: #800000; 
       font-weight: bold;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     }
 
     .menu-item:hover {
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       transform: scale(1.02);
-      background-color: #ff9933; /* Orange hover */
+      background-color: #ff9933;
       color: #fff;
     }
 
     .details {
-      display: none;
+      overflow: hidden;
+      max-height: 0;
+      opacity: 0;
+      transition: max-height 0.5s ease, opacity 0.5s ease;
       margin-top: 10px;
       font-weight: normal;
       color: #333;
@@ -62,6 +68,7 @@
       max-width: 300px;
       border-radius: 8px;
       margin-bottom: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     .nav-link {
@@ -73,6 +80,7 @@
       padding: 10px 20px;
       border-radius: 5px;
       font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
     .nav-link:hover {
       background-color: #ff9933;
