--- a/menu_select.html
+++ b/menu_select.html
@@ -80,9 +80,9 @@
     if (lang === "hi") {
       document.getElementById("title").textContent = "मेनू चुनें";
       document.getElementById("vegLink").textContent = "शाकाहारी मेनू 🥦";
-      document.getElementById("vegLink").setAttribute("href", "veg_hi.html");   // ✅ Hindi Veg link
+      document.getElementById("vegLink").setAttribute("href", "veg_hi.html");
       document.getElementById("nonvegLink").textContent = "मांसाहारी मेनू 🍗";
-      document.getElementById("nonvegLink").setAttribute("href", "nonveg_hi.html"); // ✅ Hindi Non-Veg link
+      document.getElementById("nonvegLink").setAttribute("href", "nonveg_hi.html");
     }
   </script>
 </body>
